--- a/sass/card.scss
+++ b/sass/card.scss
@@ -2,6 +2,10 @@
   background-color: #fff;
   min-height: 60vh;
   margin: 5rem 0;
+
+  @media only screen and (max-width: 1100px) {
+    min-height: auto;
+  }
 }
 .sec--title {
   text-align: center;
