--- a/sass/header.scss
+++ b/sass/header.scss
@@ -7,6 +7,10 @@
   width: 100%;
   min-height: 100vh;
   color: #fff;
+
+  @media only screen and (max-width: 1100px) {
+    min-height: auto;
+  }
 }
 .logo {
   font-size: 2rem;
